k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-infra-lab
  labels:
    app: my-infra-lab
