k8s/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: my-infra-lab
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
